--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "FakeDateTest",
+  "name": "bills-sys-data",
   "version": "1.0.0",
   "description": "",
   "main": "fakerTest.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
